# GptCodex

./: .gitignore
CSharpProjects/WheelSpeed/: AboutBoxForm.Designer.cs  AboutBoxForm.cs  Complex.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  NumericUpDownEx.cs  PointsCalc.cs  Program.cs  WheelSpeed.csproj
CSharpProjects/WheelSpeed/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
CSharpProjects/WheelSpeedWPF/: AboutWindow.xaml  AboutWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NumericUpDown.xaml  NumericUpDown.xaml.cs  PointsCalc.cs  WheelSpeedWPF.csproj  WheelVisualizer.cs  app.xaml  app.xaml.cs
QtProjects/WheelSpeed/: mainwindow.cpp  mainwindow.h  wheelwidget.cpp
QtProjects/WheelSpeed2/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  wheelwidget.h
QtProjects/WheelSpeed3/: CMakeLists.txt  qml.qrc  readme.md
QtProjects/WheelSpeed3/qml/: main.qml  wheel.qml
QtProjects/WheelSpeed4/: CMakeLists.txt  main.cpp  qml.qrc  readme.md
QtProjects/WheelSpeed4/qml/: main.qml
QtProjects/WheelSpeed4/qml/components/: WheelDisplay.qml
QtProjects/WheelSpeedQt/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  wheelwidget.cpp  wheelwidget.h
